# onlinetlabs

./: .dockerignore  .gitignore  Makefile  README.md  REFACTOR_PLAN.md  lefthook.yml  pyproject.toml
autotests/: Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
autotests/api_tests/e2e/: test_backend_session_ws_e2e.py  test_gns3_session_ws_e2e.py
autotests/settings/api_client/: api_client.py  ws_client.py
autotests/settings/configuration/: config_model.py  env_config_loader.py  env_paths.py  local.env.aes
autotests/settings/constants/: constants_settings.py
autotests/settings/delete_entities/: entities_cleanup.py  entities_dict_template.py  entities_helper_api.py  entities_registry.py  entity_types.py
autotests/settings/reports/: autotest.py
autotests/settings/utils/: custom_assertions.py  data_generator_abstraction.py  singleton.py  utils.py
backend/: Dockerfile  Makefile  README.md  alembic.ini  deps.py  gns3_service_client.py  local.env.aes  local.env.example  main.py  pyproject.toml  pytest.ini  rate_limit.py  requirements.txt
backend/.e2e/: ab_run.py  cohort_run.py  governance_demo.py  seed_student.sql  test_convention.md
backend/admin/: __init__.py  data_registry.py  router.py  schemas.py
backend/agents/: _shared.py  base.py  registry.py
backend/agents/analytics/: agent.py  models.py  tools.py
backend/agents/hint/: agent.py  models.py  tools.py
backend/agents/lab/: agent.py  models.py  tools.py
backend/agents/orchestrator/: agent.py  models.py  router.py
backend/agents/tutor/: agent.py  models.py  tools.py
backend/agents/validator/: agent.py  models.py  tools.py
backend/analytics/: router.py  schemas.py
backend/auth/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
backend/chat/: persistence.py  router.py  schemas.py  stream_protocol.py  tools.py
backend/cohort/: metrics.py  service.py
backend/config/: __init__.py  config_model.py  env_config_loader.py  llm_catalog.py
backend/control/: __init__.py  criterion.py  derive_thresholds.py
backend/control_interface/: audit.py  consent.py  interface.py  registry.py  router.py  schemas.py
backend/core/llm/: client.py  prompts.py
backend/core/middleware/: request_id.py
backend/courses/: router.py  schemas.py  service.py
backend/db/: session.py
backend/escalation/: router.py  service.py
backend/evaluation/: annotation.py  grounding.py  harness.py  help_dependence.py  metrics.py  real_loader.py  reproducibility.py  scenarios.py  stats.py
backend/experiment/: analysis.py  arm_resolver.py  assignment.py  control_arm.py  finalizer.py  group_assigner.py  router.py  schemas.py  transfer.py  variant_router.py
backend/instructor/: router.py  schemas.py  service.py
backend/labs/: router.py  schemas.py  service.py  spec.py
backend/learning_analytics/: collector.py  context.py  evidence.py  features.py  latency.py  monitor.py  mrt.py  process_state.py  progress_observer.py
backend/llm/: client.py  prompts.py
backend/mcp_client/: client.py
backend/middleware/: request_id.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_authjs_schema.py  003_openclaw_experiment_metadata.py  004_experiment_metrics_ab_task8.py  005_experiment_metrics_base_arm.py  006_consent.py  007_mcp_audit.py  2026-07-17-1200_drop_learning_sessions_user_id_index.py  22dcee4c206a_add_gns3_completed_template_project_id.py  310618cd8071_add_labs_enabled.py  41942c30dead_add_validation_runs.py  4567567ebcc6_add_user_can_select_model.py  482644690a75_add_users_default_model_id.py  4ff0a1c2abb5_add_agent_activity_events.py  628ccc7b885a_platform_events.py  74a45c591c43_user_control_arm.py  78dc1fecb74e_add_users_is_active.py  8d7005789325_add_user_can_view_agent_logs.py  a71aa2584864_add_password_hash_and_role.py  (+14 more)
backend/models/: __init__.py  agent_activity_event.py  base.py  behavioral_event.py  chat_message.py  consent.py  course.py  cycle_latency_sample.py  enums.py  experiment.py  grounding_comparison.py  intervention_decision.py  lab.py  mcp_audit.py  platform_event.py  process_state_sample.py  progress.py  regime_annotation.py  session.py  session_evidence_snapshot.py  user.py  validation_run.py
backend/observability/: activity.py  logging.py  metrics.py  models.py  redact.py  sentry.py
backend/openclaw/: __init__.py  adapter.py  client.py
backend/progress/: router.py  schemas.py  service.py
backend/scripts/: eval_identifier.py  export_cohort_metrics.py  export_defense_metrics.py  export_mcp_audit.py
backend/security/: secrets.py
backend/sessions/: context.py  idle_reclaim.py  monitor_registry.py  queue.py  router.py  schemas.py  service.py  state_cache.py
backend/simulation/: README.md  ground_truth.py  help_text.py  lab_config.py  orchestrator.py  policy.py  profiles.py  run.py
backend/tests/: conftest.py  test_gns3_service_client_topology.py  test_state_cache.py
backend/tools/: env_cipher.py
backend/users/: router.py
backend/utils/: custom_assertions.py
backend/validation/: __init__.py  repository.py  router.py  runner.py  runs_router.py  schemas.py  service.py  stream.py
backend/websocket/: gateway.py
gns3/gns3-mcp/: Dockerfile  local.env.aes  pyproject.toml  pytest.ini
gns3/gns3-service/: .env.aes  Dockerfile.service  pyproject.toml
mcp-sdk/: pyproject.toml
onlinetlabs-backend/: README.md  local.env.example  pyproject.toml  pytest.ini
onlinetlabs-backend/auth/: exceptions.py  router.py  schemas.py  service.py
onlinetlabs-backend/config/: __init__.py  config_model.py  encryption.py  env_config_loader.py
onlinetlabs-backend/courses/: router.py  service.py
onlinetlabs-backend/labs/: router.py  schemas.py  service.py
onlinetlabs-backend/migrations/: env.py
onlinetlabs-backend/models/: __init__.py  course.py  lab.py  session.py  user.py
onlinetlabs-backend/progress/: service.py
onlinetlabs-backend/sessions/: router.py  schemas.py  service.py
onlinetlabs-backend/tests/: conftest.py
onlinetlabs-gns3/mcp-server/: .env.example  pyproject.toml  pytest.ini
onlinetlabs-mcp-sdk/: pyproject.toml  pytest.ini
(+861 files in other folders)
