[tool.poetry]
name = "backend"
version = "0.1.0"
description = "OnlineTLabs Backend API"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.31.0"
alembic = "^1.13.0"
pydantic-settings = "^2.1.0"
bcrypt = "^4.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.0.0"}
python-dotenv = "^1.2.1"
pyyaml = "^6.0.3"
pydantic-ai-slim = {version = "^2.0", extras = ["openai"]}
mcp_sdk = {path = "../mcp-sdk", develop = true}
redis = "^8.0.0"
slowapi = "^0.1.9"
websockets = "^16.0"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
sentry-sdk = {version = "^2.0.0", extras = ["fastapi"]}
prometheus-fastapi-instrumentator = "^7.0.0"
tenacity = "^9.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.0"
ruff = "^0.14.0"
aiosqlite = "^0.22.1"
respx = "^0.23.1"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["migrations", "alembic"]
force-exclude = true  # keep excludes honored when lefthook passes explicit staged paths

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "DTZ", "T20", "RUF"]
# E501 handled by the formatter; B008 is the FastAPI Depends() default-arg idiom.
# RUF001-003 (ambiguous Cyrillic) deferred to the comment/docstring translation phase.
ignore = [
    "E501", "B008", "RUF001", "RUF002", "RUF003",
    # Ratchet backlog: pre-existing violations, fix incrementally then re-enable.
    "E402", "SIM117", "SIM105", "C408", "C416", "B904", "B905",
    "RUF059", "RUF012", "RUF005", "RUF006", "ASYNC109", "F841", "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "PLR2004", "T20", "B017"]
"scripts/**" = ["T20"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
