[project]
name = "backend"
version = "0.1.0"
description = "OnlineTLabs Backend API"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.51.0,<0.52.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "alembic>=1.13.0,<2.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "bcrypt>=4.2.0,<5.0.0",
    "PyJWT>=2.9.0,<3.0.0",
    "pydantic[email]>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "pydantic-ai-slim[openai]>=2.0,<3.0",
    "mcp_sdk",
    "redis>=8.0.0,<9.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "websockets>=16.0,<17.0",
    "structlog>=26.0.0,<27.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "tenacity>=9.1.2,<10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
    "ruff>=0.14.0,<0.15.0",
    "aiosqlite>=0.22.1,<0.23.0",
    "respx>=0.23.1,<0.24.0",
    "httpx-ws>=0.9.0,<0.10.0",
    "mypy>=1.13,<2.0.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["migrations", "alembic"]
force-exclude = true  # keep excludes honored when lefthook passes explicit staged paths

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "DTZ", "T20", "RUF"]
# E501 handled by the formatter; B008 is the FastAPI Depends() default-arg idiom.
# RUF001-003 (ambiguous Cyrillic) deferred to the comment/docstring translation phase.
ignore = [
    "E501", "B008", "RUF001", "RUF002", "RUF003",
    # Ratchet backlog: pre-existing violations, fix incrementally then re-enable.
    "E402", "SIM117", "SIM105", "C408", "C416", "B904", "B905",
    "RUF059", "RUF012", "RUF005", "RUF006", "ASYNC109", "F841", "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "PLR2004", "T20", "B017"]
"scripts/**" = ["T20"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
exclude = ["migrations/", "tests/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true

