[tool.poetry]
name = "mcp_sdk"
version = "0.1.0"
description = "SDK для создания MCP-серверов сложных систем"
authors = []
readme = "README.md"
packages = [{include = "mcp_sdk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
mcp = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.14.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "DTZ", "T20", "RUF"]
ignore = [
    "E501", "B008", "RUF001", "RUF002", "RUF003",
    # Ratchet backlog: pre-existing violations, fix incrementally then re-enable.
    "E402", "SIM117", "SIM105", "C408", "C416", "B904", "B905",
    "RUF059", "RUF012", "RUF005", "RUF006", "ASYNC109", "F841", "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "PLR2004", "T20", "B017"]
"scripts/**" = ["T20"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
