[project]
name = "gns3-mcp-server"
version = "0.1.0"
description = "MCP-сервер для GNS3"
authors = []
requires-python = ">=3.11"
dependencies = [
    "mcp_sdk",
    "httpx>=0.28.0,<0.29.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "websockets>=16.0,<17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "ruff>=0.14.0,<0.15.0",
    "respx>=0.23.1,<0.24.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "DTZ", "T20", "RUF"]
ignore = [
    "E501", "B008", "RUF001", "RUF002", "RUF003",
    # Ratchet backlog: pre-existing violations, fix incrementally then re-enable.
    "E402", "SIM117", "SIM105", "C408", "C416", "B904", "B905",
    "RUF059", "RUF012", "RUF005", "RUF006", "ASYNC109", "F841", "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "PLR2004", "T20", "B017"]
"scripts/**" = ["T20"]

