[tool.poetry]
name = "gns3-service"
version = "0.1.0"
description = "Сервис управления GNS3 — users, projects, ACL, history"
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.0"
websockets = "^15.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.15.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
greenlet = "^3.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.14.0"
respx = "^0.22.0"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
