[tool.poetry]
name = "gns3-service"
version = "0.1.0"
description = "Сервис управления GNS3 — users, projects, ACL, history"
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.28.0"
websockets = "^15.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.15.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
greenlet = "^3.3.2"
tenacity = "^9.0.0"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
sentry-sdk = {version = "^2.0.0", extras = ["fastapi"]}
prometheus-fastapi-instrumentator = "^7.0.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.14.0"
respx = "^0.22.0"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "DTZ", "T20", "RUF"]
ignore = [
    "E501", "B008", "RUF001", "RUF002", "RUF003",
    # Ratchet backlog: pre-existing violations, fix incrementally then re-enable.
    "E402", "SIM117", "SIM105", "C408", "C416", "B904", "B905",
    "RUF059", "RUF012", "RUF005", "RUF006", "ASYNC109", "F841", "T201",
    "SIM102", "SIM103",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "PLR2004", "T20", "B017"]
"scripts/**" = ["T20"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
